# plot-map

./: README.md  go.mod
client/: CMakeLists.txt
client/app/: CMakeLists.txt  main.cpp  version.h.in
client/include/plot/: lib.hpp  xml.hpp
client/src/: CMakeLists.txt  lib.cpp  xml.cpp
client/tests/: CMakeLists.txt  test_lib.cpp  test_xml.cpp  testlib.cpp
datas/: 2013_aug26_toyara.gpx
protos/: go.mod  route_guide.pb.go  route_guide.proto  route_guide_grpc.pb.go
server/: .gitignore  Makefile  go.mod  main.go
